package edu.hitsz.subscriber;

public interface BombSubscriber {
    void bombExplode();
}
